--- a/backend/src/WebApi/WebApi.csproj
+++ b/backend/src/WebApi/WebApi.csproj
@@ -6,9 +6,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <AssemblyName>GameList.$(MSBuildProjectName)</AssemblyName>
     <RootNamespace>GameList.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+    <UserSecretsId>fb19cf5e-4c6b-41ad-a0aa-4ed163d9f3a7</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
