--- a/backend/src/Infrastructure/Infrastructure.csproj
+++ b/backend/src/Infrastructure/Infrastructure.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyName>GameList.$(MSBuildProjectName)</AssemblyName>
-    <RootNamespace>GameList.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+    <AssemblyName>GameApp.$(MSBuildProjectName)</AssemblyName>
+    <RootNamespace>GameApp.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
