Almost complete ripoff from jasontaylordev CleanArchitecture tamplate.

--- a/backend/src/WebApi/appsettings.json
+++ b/backend/src/WebApi/appsettings.json
@@ -1,8 +1,19 @@
 {
+  "UseInMemoryDatabase": true,
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=C:\\LocalDb\\GameAppDb.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "IdentityServer": {
+    "Clients": {
+      "GameApp.WebApi": {
+        "Profile": "IdentityServerSPA"
+      }
     }
   },
   "AllowedHosts": "*"
