--- a/backend/src/Domain/Domain.csproj
+++ b/backend/src/Domain/Domain.csproj
@@ -8,4 +8,8 @@
     <RootNamespace>GameApp.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.0.1" />
+  </ItemGroup>
+
 </Project>
