Updated davelopment connection string.

--- a/backend/src/WebApi/appsettings.Development.json
+++ b/backend/src/WebApi/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=C:\\LocalDb\\GameAppDb.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
