--- a/backend/src/WebApi/appsettings.json
+++ b/backend/src/WebApi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "UseInMemoryDatabase": true,
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=C:\\LocalDb\\GameAppDb.db"
+    "DefaultConnection": "Data Source=Data/GameAppDb.db"
   },
   "Logging": {
     "LogLevel": {
