Added simple games page fetching with api.

--- a/backend/src/WebApi/appsettings.json
+++ b/backend/src/WebApi/appsettings.json
@@ -9,6 +9,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "CorsOrigins": [
+    "http://localhost",
+    "http://127.0.0.1"
+  ],
   "IdentityServer": {
     "Clients": {
       "GameApp.WebApi": {
