--- a/backend/src/WebApi/appsettings.Development.json
+++ b/backend/src/WebApi/appsettings.Development.json
@@ -8,6 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "CorsOrigins": [
+    "http://localhost:5173",
+    "http://127.0.0.1:5173"
+  ],
   "IdentityServer": {
     "Key": {
       "Type": "Development"
