Added Serilog as logger for WebApi.

--- a/backend/src/WebApi/appsettings.Development.json
+++ b/backend/src/WebApi/appsettings.Development.json
@@ -1,11 +1,13 @@
 {
+  "UseInMemoryDatabase": true,
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=C:\\LocalDb\\GameAppDb.db"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console" ],
+    "WriteTo": [ "Console" ],
+    "MinimumLevel": {
+      "Default": "Debug"
     }
   },
   "CorsOrigins": [
