--- a/backend/src/WebApi/appsettings.json
+++ b/backend/src/WebApi/appsettings.json
@@ -1,12 +1,26 @@
 {
-  "UseInMemoryDatabase": true,
+  "UseInMemoryDatabase": false,
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=Data/GameAppDb.db"
   },
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Seq" ],
+    "WriteTo": [
+      {
+        "Name": "Seq",
+        "Args": { "serverUrl": "http://seq:5341" }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning"
+      }
+    },
+    "Properties": {
+      "Application": "GameApp-backend"
     }
   },
   "CorsOrigins": [
